# drochess

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: board.rs  gamestate.rs  important_notes.txt  lib.rs  main.rs
src/board/: defs.rs
src/engine/: mod.rs
src/gamestate/: board.rs  castling_rights.rs  chess_move.rs  constants.rs  defs.rs  history.rs  mod.rs  zobrist.rs
src/movegen/: constants.rs  defs.rs  masks.rs  mod.rs  sliders.rs
src/movegen/magic_bitboards/: mod.rs  notes.txt
src/utils/: display.rs  fen.rs  mod.rs
tests/: gamestate.rs  gamestate_tests.rs  movegen_tests.rs
