[package]
name = "rusty-chess-engine"
version = "0.1.0"
edition = "2021"



[dependencies]
lazy_static = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = {features = ["derive"]}
serde_json = "1.0.100"
thiserror = "1.0.61"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

